--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "hono": "4.11.4",
     "jose": "5.10.0",
     "shamir": "0.7.1",
-    "yaml": "2.6.1"
+    "yaml": "2.6.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "9.39.2",
