--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "3.693.0",
+    "@hono/node-server": "1.19.9",
     "@noble/hashes": "1.8.0",
     "hono": "4.11.4",
     "jose": "5.10.0",
